@@ -42,7 +42,7 @@ public class ExtensionManagerTest extends Assert {
         ResourceManager rm = new DefaultResourceManager(resolver);
         
         extensions = new HashMap<Class<?>, Object>();
-        extensions.put(Integer.class, new Integer(0));
+        extensions.put(Integer.class, Integer.valueOf(0));
         
         manager = new ExtensionManagerImpl("test-extension.xml", 
             Thread.currentThread().getContextClassLoader(), extensions, rm, null); 
